Update Standard for Public Code review to 0.8.1

--- a/templates/standard-for-public-code.html
+++ b/templates/standard-for-public-code.html
@@ -6,9 +6,9 @@
 
 {{ define "main" }}
 <main class="container">
-    <h1>Govdirectory and the Standard for Public Code version 0.8.0</h1>
+    <h1>Govdirectory and the Standard for Public Code version 0.8.1</h1>
     
-<h2><a href="https://standard.publiccode.net/criteria/code-in-the-open.html" class="dark-link">Code in the open</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/code-in-the-open.html" class="dark-link">Code in the open</a></h2>
 
 &#9745;<!-- &#9745; --> criterion met.
 
@@ -76,7 +76,7 @@ Documenting which source code or policy underpins any specific interaction the g
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/bundle-policy-and-source-code.html" class="dark-link">Bundle policy and source code</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/bundle-policy-and-source-code.html" class="dark-link">Bundle policy and source code</a></h2>
 
 &#9745;<!-- &#9745; --> criterion met.
 
@@ -132,7 +132,7 @@ Continuous integration tests SHOULD validate that the source code and the policy
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/make-the-codebase-reusable-and-portable.html" class="dark-link">Make the codebase reusable and portable</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/make-the-codebase-reusable-and-portable.html" class="dark-link">Make the codebase reusable and portable</a></h2>
 
 &#9744;<!-- &#9745; --> criterion met.
 
@@ -260,7 +260,7 @@ While Wikidata is primary, queries could be made to another Wikibase with replic
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/welcome-contributors.html" class="dark-link">Welcome contributors</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/welcome-contributors.html" class="dark-link">Welcome contributors</a></h2>
 
 &#9745;<!-- &#9745; --> criterion met.
 
@@ -364,7 +364,7 @@ Including a code of conduct for contributors in the codebase is OPTIONAL.
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/make-contributing-easy.html" class="dark-link">Make contributing easy</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/make-contributing-easy.html" class="dark-link">Make contributing easy</a></h2>
 
 &#9745;<!-- &#9745; --> criterion met.
 
@@ -432,7 +432,7 @@ The documentation MUST include instructions for how to report potentially securi
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/maintain-version-control.html" class="dark-link">Maintain version control</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/maintain-version-control.html" class="dark-link">Maintain version control</a></h2>
 
 &#9744;<!-- &#9745; --> criterion met.
 
@@ -536,7 +536,7 @@ It is OPTIONAL for contributors to sign their commits and provide an email addre
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/require-review-of-contributions.html" class="dark-link">Require review of contributions</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/require-review-of-contributions.html" class="dark-link">Require review of contributions</a></h2>
 
 &#9744;<!-- &#9745; --> criterion met.
 
@@ -652,7 +652,7 @@ Performing reviews by multiple reviewers is OPTIONAL.
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/document-codebase-objectives.html" class="dark-link">Document codebase objectives</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/document-codebase-objectives.html" class="dark-link">Document codebase objectives</a></h2>
 
 &#9745;<!-- &#9745; --> criterion met.
 
@@ -696,7 +696,7 @@ On <a href="https://www.govdirectory.org/about/">website</a> and in <a href="htt
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/document-the-code.html"  class="dark-link">Document the code</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/document-the-code.html" class="dark-link">Document the code</a></h2>
 
 &#9744;<!-- &#9745; --> criterion met.
 
@@ -707,7 +707,7 @@ On <a href="https://www.govdirectory.org/about/">website</a> and in <a href="htt
 Ok
 </td>
 <td>
-All of the functionality of the codebase, policy as well as source code, MUST be described in language clearly understandable for those that understand the purpose of the codebase.
+All functionality MUST be described in a clear language. The audience is those that understand the purpose of the codebase.
 </td>
 <td>
 
@@ -719,7 +719,7 @@ All of the functionality of the codebase, policy as well as source code, MUST be
 Ok
 </td>
 <td>
-The documentation of the codebase MUST contain a description of how to install and run the software.
+The documentation MUST contain a description of how to install and run the software.
 </td>
 <td>
 
@@ -731,7 +731,7 @@ The documentation of the codebase MUST contain a description of how to install a
 
 </td>
 <td>
-The documentation of the codebase MUST contain examples demonstrating the key functionality.
+The documentation MUST contain examples demonstrating the key functionality.
 </td>
 <td>
 
@@ -743,7 +743,7 @@ The documentation of the codebase MUST contain examples demonstrating the key fu
 
 </td>
 <td>
-The documentation of the codebase SHOULD contain a high level description that is clearly understandable for a wide audience of stakeholders, like the general public and journalists.
+The documentation SHOULD contain an overview that is easy to understand by a wide audience. The audience includes the general public and journalists.
 </td>
 <td>
 In <a href="https://github.com/govdirectory/website/tree/main#readme">README</a>, but can be clearer.
@@ -755,7 +755,7 @@ In <a href="https://github.com/govdirectory/website/tree/main#readme">README</a>
 Ok
 </td>
 <td>
-The documentation of the codebase SHOULD contain a section describing how to install and run a standalone version of the source code, including, if necessary, a test dataset.
+The documentation SHOULD contain a section describing how to install and run a standalone version of the software. This includes a test dataset if necessary.
 </td>
 <td>
 
@@ -767,7 +767,7 @@ The documentation of the codebase SHOULD contain a section describing how to ins
 
 </td>
 <td>
-The documentation of the codebase SHOULD contain examples for all functionality.
+The documentation SHOULD contain examples for all functionality.
 </td>
 <td>
 
@@ -779,7 +779,7 @@ The documentation of the codebase SHOULD contain examples for all functionality.
 
 </td>
 <td>
-The documentation SHOULD describe the key components or modules of the codebase and their relationships, for example as a high level architectural diagram.
+The documentation SHOULD describe the key components or modules and their relationships. For example, this could be done as a high level architectural diagram.
 </td>
 <td>
 
@@ -798,21 +798,9 @@ There SHOULD be continuous integration tests for the quality of the documentatio
 </td>
 </tr>
 
-<tr>
-<td>
-
-</td>
-<td>
-Including examples that make users want to immediately start using the codebase in the documentation of the codebase is OPTIONAL.
-</td>
-<td>
-
-</td>
-</tr>
-
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/use-plain-english.html" class="dark-link">Use plain English</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/use-plain-english.html" class="dark-link">Use plain English</a></h2>
 
 &#9744;<!-- &#9745; --> criterion met.
 
@@ -916,7 +904,7 @@ Providing additional courtesy translations of any code, documentation or tests i
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/use-open-standards.html" class="dark-link">Use open standards</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/use-open-standards.html" class="dark-link">Use open standards</a></h2>
 
 &#9745;<!-- &#9745; --> criterion met.
 
@@ -1008,7 +996,7 @@ Non-open standards that are machine testable SHOULD be preferred over non-open s
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/use-continuous-integration.html" class="dark-link">Use continuous integration</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/use-continuous-integration.html" class="dark-link">Use continuous integration</a></h2>
 
 &#9744;<!-- &#9745; --> criterion met.
 
@@ -1136,7 +1124,7 @@ Testing the software by using examples in the documentation is OPTIONAL.
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/publish-with-an-open-license.html" class="dark-link">Publish with an open license</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/publish-with-an-open-license.html" class="dark-link">Publish with an open license</a></h2>
 
 &#9744;<!-- &#9745; --> criterion met.
 
@@ -1216,7 +1204,7 @@ Having multiple licenses for different types of source code and documentation is
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/make-the-codebase-findable.html" class="dark-link">Make the codebase findable</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/make-the-codebase-findable.html" class="dark-link">Make the codebase findable</a></h2>
 
 &#9744;<!-- &#9745; --> criterion met.
 
@@ -1344,7 +1332,7 @@ Regular presentations at conferences by the community are OPTIONAL.
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/use-a-coherent-style.html" class="dark-link">Use a coherent style</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/use-a-coherent-style.html" class="dark-link">Use a coherent style</a></h2>
 
 &#9744;<!-- &#9745; --> criterion met.
 
@@ -1391,7 +1379,7 @@ The style guide SHOULD include expectations for inline comments and documentatio
 Ok
 </td>
 <td>
-Including expectations for <a href="https://standard.publiccode.net/criteria/use-plain-english.html">understandable English</a> in the style guide is OPTIONAL.
+Including expectations for <a href="https://www.standardforpubliccode.org/criteria/use-plain-english.html">understandable English</a> in the style guide is OPTIONAL.
 </td>
 <td>
 <a href="https://github.com/govdirectory/website/blob/main/CONTRIBUTING.md#standards-to-follow">CONTRIBUTING</a>
@@ -1400,7 +1388,7 @@ Including expectations for <a href="https://standard.publiccode.net/criteria/use
 
 </table>
 
-<h2><a href="https://standard.publiccode.net/criteria/document-codebase-maturity.html" class="dark-link">Document codebase maturity</a></h2>
+<h2><a href="https://www.standardforpubliccode.org/criteria/document-codebase-maturity.html" class="dark-link">Document codebase maturity</a></h2>
 
 &#9744;<!-- &#9745; --> criterion met.
 
@@ -1447,7 +1435,7 @@ Codebase versions that are ready to use MUST only depend on versions of other co
 
 </td>
 <td>
-The codebase SHOULD contain a log of changes from version to version, for example in the `CHANGELOG`.
+The codebase SHOULD contain a summary of changes from version to version, for example in the `RELEASE_NOTES`.
 </td>
 <td>
 
